--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,7 +71,6 @@
     .header-links a {
       margin-left: 20px;
       margin-right: 20px;
-      text-decoration: none;
       color: #c9a036;
       font-weight: bold;
       font-size: 20px;
@@ -292,6 +291,11 @@
         /* Jeśli menu jest widoczne */
         .header-links.open {
           display: flex;
+        }
+        #nav-links a {
+            color: #c9a036;
+            font-weight: bold;
+            font-size: 15px;
         }
       }
       
