--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,6 +29,9 @@
       position: relative;
       width: 90%;
       margin-top: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .custom-header {
