--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,3 @@
-/* @import url("base.css");
-@import url("components.css");
-@import url("layout.css");
-@import url("modal.css");
-@import url("responsive.css");
-@import url("sections.css"); */
-
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&display=swap");
 
 * {
@@ -16,7 +9,9 @@
   text-decoration: none;
   outline: 0;
   box-sizing: border-box;
-  overflow-x: hidden;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 body {
@@ -25,13 +20,13 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background-image: url(../images/tlo.jpg);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+}
+body::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
 }
 
 /* === LAYOUT === */
+
 header,
 .custom-header,
 .custom-footer {
@@ -43,17 +38,9 @@ header,
 }
 
 .custom-header {
-  height: auto;
   min-height: 200px;
-}
-
-.custom-header:hover {
-  background: linear-gradient(
-    to top,
-    rgba(200, 200, 200, 0.5),
-    rgba(100, 100, 100, 0.5)
-  );
-  background-size: 100% 200%;
+  background: url(../images/napis-header.jpg) no-repeat center;
+  background-size: contain;
 }
 
 .custom-footer {
@@ -72,25 +59,24 @@ header,
 }
 
 .logo-container img {
-  height: auto;
-  max-height: 150px;
   width: auto;
   max-width: 80%;
+  height: auto;
+  max-height: 150px;
   border-radius: 5%;
 }
 
 .header-links {
-  width: 100%;
   position: absolute;
   bottom: 10px;
+  width: 100%;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
 }
 
 .header-links a {
-  margin-left: 20px;
-  margin-right: 20px;
-  color: #424242;
+  margin: 0 20px;
+  color: darkolivegreen;
   font-weight: bold;
   font-size: 25px;
 }
@@ -112,33 +98,44 @@ header,
 }
 
 /* === SECTIONS === */
+
 .aboutFengShui {
-  background: rgba(47, 51, 30, 0.7);
   width: 100%;
+  height: 800px;
+  padding: 60px 10%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   gap: 20px;
-  padding: 60px 10%;
+  background: rgba(47, 51, 30, 0.4) url(../images/plainBackground.jpg) no-repeat
+    center;
+  background-size: cover;
+}
+
+.shadow {
+  width: 95%;
+  display: flex;
+  background: rgba(47, 51, 30, 0.7);
 }
 
 .text-Fengshui {
   flex: 1;
-  max-width: 600px;
+  margin: 20px;
+  padding: 0 50px;
+  font-size: 25px;
   color: white;
-  font-size: 20px;
-  padding: 0 20px;
 }
 
 .img-Fengshui {
   flex: 1;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .img-Fengshui img {
+  width: 100%;
   max-width: 100%;
   height: auto;
   max-height: 400px;
@@ -146,23 +143,24 @@ header,
 }
 
 /* === COMPONENTS === */
+
 .hamburger {
   display: none;
-  flex-direction: column;
-  cursor: pointer;
-  justify-content: space-between;
-  width: 30px;
-  height: 25px;
   position: absolute;
   top: 25px;
   right: 25px;
+  width: 30px;
+  height: 25px;
   z-index: 100;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hamburger .bar {
-  background-color: #545454;
-  height: 5px;
   width: 100%;
+  height: 5px;
+  background-color: #545454;
   border-radius: 5px;
 }
 
@@ -176,21 +174,20 @@ h1 {
 
 .container,
 #results {
+  width: 100%;
+  padding: 30px;
+  margin: 30px 0;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  border-radius: 12px;
   background: linear-gradient(
     135deg,
     rgba(250, 252, 251, 0.3),
     rgba(224, 224, 224, 0.3)
   );
-  padding: 30px;
-  border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 400px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  display: flex;
-  flex-direction: column;
-  text-align: left;
 }
 
 form {
@@ -216,12 +213,12 @@ select {
 
 button {
   padding: 12px;
-  background-color: darkolivegreen;
+  font-size: 1.1em;
   color: white;
+  background-color: darkolivegreen;
   border: none;
   border-radius: 8px;
   cursor: pointer;
-  font-size: 1.1em;
   transition: background-color 0.3s;
 }
 
@@ -230,16 +227,10 @@ button:hover {
 }
 
 #results {
-  width: 100%;
   max-width: 350px;
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   padding: 20px;
   background-color: #fff;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  align-items: center;
 }
 
 .result-section {
@@ -260,12 +251,13 @@ ul {
 }
 
 /* === MODAL === */
+
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000;
-  left: 0;
   top: 0;
+  left: 0;
+  z-index: 1000;
   width: 100%;
   height: 100%;
   overflow: auto;
@@ -273,122 +265,61 @@ ul {
 }
 
 .modal-content {
-  background-color: #fefefe;
   margin: 15% auto;
   padding: 20px;
+  width: 90%;
+  max-width: 700px;
+  background-color: #fefefe;
   border: 1px solid #888;
-  width: 80%;
-  max-width: 500px;
+  border-radius: 12px;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
 .close {
-  color: #aaa;
-  float: right;
+  position: absolute;
+  top: -10px;
+  right: 10px;
   font-size: 40px;
   font-weight: bold;
+  color: #aaa;
 }
 
 .close:hover,
 .close:focus {
   color: black;
-  text-decoration: none;
   cursor: pointer;
 }
 
 /* === RESPONSIVE === */
+
 @media (max-width: 1024px) {
-  body {
-    background-image: url(../images/tlo-tablet.png);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  .container,
-  #results {
-    width: 90%;
-    max-width: 350px;
-    padding: 20px;
-  }
-
-  .header-links {
-    display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 80px;
-    right: 0;
-    background-color: #fff;
-    width: 100%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 10px 0;
-  }
-
-  button {
-    width: 100%;
-    padding: 14px;
-    font-size: 1.1em;
-  }
-
-  .hamburger {
-    display: flex;
-  }
-
-  .header-links.open {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    height: 90px;
-  }
-
-  #nav-links a {
-    color: darkolivegreen;
-    font-weight: bold;
-    font-size: 25px;
-    margin-left: 0;
+  .custom-header {
+    min-height: 150px;
   }
 
   .aboutFengShui {
-    flex-direction: column;
-    gap: 60px;
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
+    height: 90%;
+  }
+
+  .img-Fengshui {
+    margin-right: 50px;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 820px) {
   body {
-    display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: auto;
-    min-height: 100vh;
-    background-image: url(../images/tlo-mobile.png);
-    background-size: cover;
-    background-position: center;
+    justify-content: flex-start;
   }
 
-  .container,
-  #results {
-    width: 90%;
-    max-width: 350px;
-    padding: 20px;
+  .custom-header {
+    min-height: 110px;
   }
 
   .header-links {
     display: none;
-    flex-direction: column;
-    position: absolute;
-    top: 80px;
-    right: 0;
-    background-color: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    padding: 10px 0;
-  }
-
-  button {
-    width: 100%;
-    padding: 14px;
-    font-size: 1.1em;
   }
 
   .hamburger {
@@ -398,14 +329,12 @@ ul {
   .header-links.open {
     display: flex;
     flex-direction: row;
-    height: 60px;
   }
 
   #nav-links a {
-    color: darkolivegreen;
-    font-weight: bold;
     font-size: 19px;
-    margin-left: 0;
+    font-weight: bold;
+    color: darkolivegreen;
   }
 
   .links-wrapper {
@@ -413,9 +342,21 @@ ul {
   }
 
   .aboutFengShui {
+    width: 100%;
+  }
+
+  .shadow {
+    width: 100%;
     flex-direction: column;
-    gap: 50px;
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
+  }
+
+  .text-Fengshui {
+    font-size: 18px;
+  }
+
+  button {
+    width: 100%;
+    padding: 14px;
+    font-size: 1.1em;
   }
 }
