--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,11 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+  background: linear-gradient(
+    135deg,
+    rgba(250, 252, 251, 0.3),
+    rgba(224, 224, 224, 0.3)
+  );
 }
 
 .main-content {
@@ -102,71 +106,6 @@ header,
   justify-content: center;
 }
 
-@media (max-width: 1024px) {
-  .custom-header {
-    min-height: 150px;
-  }
-  .header-links {
-    bottom: 0;
-  }
-  #nav-links a {
-    font-size: 25px;
-  }
-  .aboutFengShui {
-    height: 90%;
-  }
-  .img-Fengshui {
-    margin-right: 50px;
-  }
-}
-@media (max-width: 820px) {
-  body {
-    align-items: center;
-    justify-content: flex-start;
-  }
-  .custom-header {
-    min-height: 110px;
-  }
-  .header-links {
-    display: none;
-  }
-  .hamburger {
-    display: flex;
-  }
-  .header-links.open {
-    display: flex;
-    flex-direction: row;
-    bottom: 5;
-  }
-  .custom-header.no-bg {
-    background-image: none !important;
-    background-color: white;
-  }
-  #nav-links a {
-    font-size: 18px;
-    font-weight: bold;
-    color: darkolivegreen;
-  }
-  .aboutFengShui {
-    width: 100%;
-  }
-  .shadow {
-    width: 100%;
-    flex-direction: column;
-  }
-  .text-Fengshui {
-    font-size: 18px;
-  }
-  .img-Fengshui {
-    margin: 0;
-    justify-content: center;
-  }
-  button {
-    width: 100%;
-    padding: 14px;
-    font-size: 1.1em;
-  }
-}
 button {
   padding: 12px;
   font-size: 1.1em;
@@ -229,7 +168,8 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover, .close:focus {
+.close:hover,
+.close:focus {
   color: black;
   cursor: pointer;
 }
@@ -262,7 +202,8 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg")
+    no-repeat center;
   background-size: cover;
 }
 
@@ -292,9 +233,75 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 ul {
   padding-left: 20px;
+}
+@media (max-width: 1024px) {
+  .custom-header {
+    min-height: 150px;
+  }
+
+  .header-links {
+    bottom: 0;
+  }
+  #nav-links a {
+    font-size: 25px;
+  }
+  .aboutFengShui {
+    height: 90%;
+  }
+  .img-Fengshui {
+    margin-right: 50px;
+  }
+}
+@media (max-width: 820px) {
+  body {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .custom-header {
+    min-height: 110px;
+  }
+  .header-links {
+    display: none;
+  }
+  .hamburger {
+    display: flex;
+  }
+  .header-links.open {
+    display: flex;
+    flex-direction: row;
+    bottom: 5;
+  }
+  .custom-header.no-bg {
+    background-image: none !important;
+    background-color: white;
+  }
+  #nav-links a {
+    font-size: 18px;
+    font-weight: bold;
+    color: darkolivegreen;
+  }
+  .aboutFengShui {
+    width: 100%;
+  }
+  .shadow {
+    width: 100%;
+    flex-direction: column;
+  }
+  .text-Fengshui {
+    font-size: 18px;
+  }
+  .img-Fengshui {
+    margin: 0;
+    justify-content: center;
+  }
+  button {
+    width: 100%;
+    padding: 14px;
+    font-size: 1.1em;
+  }
 }
