--- a/scss/components/_hamburger.css
+++ b/scss/components/_hamburger.css
@@ -9,11 +9,11 @@
   cursor: pointer;
   flex-direction: column;
   justify-content: space-between;
+}
 
-  .bar {
-    width: 100%;
-    height: 5px;
-    background-color: #545454;
-    border-radius: 5px;
-  }
+.hamburger .bar {
+  width: 100%;
+  height: 5px;
+  background-color: #545454;
+  border-radius: 5px;
 }
