--- a/css/main.css
+++ b/css/main.css
@@ -91,11 +91,7 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(
-    135deg,
-    rgba(250, 252, 251, 0.3),
-    rgba(224, 224, 224, 0.3)
-  );
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
 }
 
 .main-content {
@@ -106,6 +102,71 @@ header,
   justify-content: center;
 }
 
+@media (max-width: 1024px) {
+  .custom-header {
+    min-height: 150px;
+  }
+  .header-links {
+    bottom: 5;
+  }
+  .hamburger {
+    display: flex;
+  }
+  #nav-links a {
+    font-size: 25px;
+  }
+  .aboutFengShui {
+    height: 90%;
+  }
+  .img-Fengshui {
+    margin-right: 50px;
+  }
+}
+@media (max-width: 820px) {
+  body {
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .custom-header {
+    min-height: 110px;
+  }
+  .header-links {
+    display: none;
+  }
+  .header-links.open {
+    display: flex;
+    flex-direction: row;
+    bottom: 5;
+  }
+  .custom-header.no-bg {
+    background-image: none !important;
+    background-color: white;
+  }
+  #nav-links a {
+    font-size: 17px;
+    font-weight: bold;
+    color: darkolivegreen;
+  }
+  .aboutFengShui {
+    width: 100%;
+  }
+  .shadow {
+    width: 100%;
+    flex-direction: column;
+  }
+  .text-Fengshui {
+    font-size: 18px;
+  }
+  .img-Fengshui {
+    margin: 0;
+    justify-content: center;
+  }
+  button {
+    width: 100%;
+    padding: 14px;
+    font-size: 1.1em;
+  }
+}
 button {
   padding: 12px;
   font-size: 1.1em;
@@ -168,8 +229,7 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   cursor: pointer;
 }
@@ -181,7 +241,7 @@ select {
   right: 25px;
   width: 30px;
   height: 25px;
-  z-index: 100;
+  z-index: 1000;
   cursor: pointer;
   flex-direction: column;
   justify-content: space-between;
@@ -202,8 +262,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -233,19 +292,81 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 ul {
   padding-left: 20px;
 }
+
+header,
+.custom-header,
+.custom-footer {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-header {
+  min-height: 200px;
+  background: url("../images/napis-header.jpg") no-repeat center;
+  background-size: contain;
+}
+
+.logo-container {
+  padding-left: 20px;
+  display: flex;
+  align-items: center;
+}
+.logo-container img {
+  width: auto;
+  max-width: 80%;
+  height: auto;
+  max-height: 150px;
+  border-radius: 5%;
+}
+
+.header-links {
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+.header-links a {
+  margin: 0 20px;
+  color: darkolivegreen;
+  font-weight: bold;
+  font-size: 25px;
+}
+.header-links a:hover {
+  color: #607d8b;
+}
+
+.custom-footer {
+  display: none;
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+}
+
+.main-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (max-width: 1024px) {
   .custom-header {
     min-height: 150px;
   }
-
   .header-links {
-    bottom: 0;
+    bottom: 5;
+  }
+  .hamburger {
+    display: flex;
   }
   #nav-links a {
     font-size: 25px;
@@ -268,9 +389,6 @@ ul {
   .header-links {
     display: none;
   }
-  .hamburger {
-    display: flex;
-  }
   .header-links.open {
     display: flex;
     flex-direction: row;
@@ -281,7 +399,7 @@ ul {
     background-color: white;
   }
   #nav-links a {
-    font-size: 18px;
+    font-size: 17px;
     font-weight: bold;
     color: darkolivegreen;
   }
