--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,3 +14,8 @@
 
 @import "pages/home";
 @import "themes/theme";
+
+@import "layout/header";
+@import "layout/footer";
+@import "layout/main";
+@import "layout/responsive";
