--- a/css/main.css
+++ b/css/main.css
@@ -103,7 +103,7 @@ header,
 }
 
 @media (max-width: 1024px) {
-  .custom-header {
+  .header {
     min-height: 150px;
   }
   .header-links {
@@ -114,6 +114,11 @@ header,
   }
   #nav-links a {
     font-size: 25px;
+  }
+  .bg-logo {
+    background-image: url(/images/grafika2.png);
+    background-position: left 5vw top;
+    background-size: 15% auto;
   }
   .aboutFengShui {
     height: 90%;
@@ -137,10 +142,6 @@ header,
     display: flex;
     flex-direction: row;
     bottom: 5;
-  }
-  .custom-header.no-bg {
-    background-image: none !important;
-    background-color: white;
   }
   #nav-links a {
     font-size: 17px;
@@ -359,7 +360,7 @@ header,
 }
 
 @media (max-width: 1024px) {
-  .custom-header {
+  .header {
     min-height: 150px;
   }
   .header-links {
@@ -370,6 +371,11 @@ header,
   }
   #nav-links a {
     font-size: 25px;
+  }
+  .bg-logo {
+    background-image: url(/images/grafika2.png);
+    background-position: left 5vw top;
+    background-size: 15% auto;
   }
   .aboutFengShui {
     height: 90%;
@@ -393,10 +399,6 @@ header,
     display: flex;
     flex-direction: row;
     bottom: 5;
-  }
-  .custom-header.no-bg {
-    background-image: none !important;
-    background-color: white;
   }
   #nav-links a {
     font-size: 17px;
