--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,11 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+  background: linear-gradient(
+    135deg,
+    rgba(250, 252, 251, 0.3),
+    rgba(224, 224, 224, 0.3)
+  );
 }
 
 .main-content {
@@ -230,7 +234,8 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover, .close:focus {
+.close:hover,
+.close:focus {
   color: black;
   cursor: pointer;
 }
@@ -263,7 +268,8 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg")
+    no-repeat center;
   background-size: cover;
 }
 
@@ -293,7 +299,7 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-     object-fit: contain;
+  object-fit: contain;
 }
 
 ul {
@@ -348,7 +354,11 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
+  background: linear-gradient(
+    135deg,
+    rgba(250, 252, 251, 0.3),
+    rgba(224, 224, 224, 0.3)
+  );
 }
 
 .main-content {
