changed grafika path

--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -14,7 +14,7 @@
   }
 
   .bg-logo {
-    background-image: url(/images/grafika2.png);
+    background-image: url(../../images/grafika2.png);
     background-position: left 5vw top;
     background-size: 15% auto;
   }
