--- a/css/main.css
+++ b/css/main.css
@@ -91,11 +91,7 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(
-    135deg,
-    rgba(250, 252, 251, 0.3),
-    rgba(224, 224, 224, 0.3)
-  );
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
 }
 
 .main-content {
@@ -120,7 +116,7 @@ header,
     font-size: 25px;
   }
   .bg-logo {
-    background-image: url("../images/grafika2.png");
+    background: url("../../images/grafika2.png") no-repeat;
     background-position: left 5vw top;
     background-size: 15% auto;
   }
@@ -234,8 +230,7 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   cursor: pointer;
 }
@@ -268,8 +263,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -299,7 +293,7 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 ul {
@@ -354,11 +348,7 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(
-    135deg,
-    rgba(250, 252, 251, 0.3),
-    rgba(224, 224, 224, 0.3)
-  );
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
 }
 
 .main-content {
@@ -383,7 +373,7 @@ header,
     font-size: 25px;
   }
   .bg-logo {
-    background-image: url("../images/grafika2.png");
+    background: url("../../images/grafika2.png") no-repeat;
     background-position: left 5vw top;
     background-size: 15% auto;
   }
