--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -14,7 +14,7 @@
   }
 
   .bg-logo {
-    background-image: url("../images/grafika2.png");
+    background: url("../../images/grafika2.png") no-repeat;
     background-position: left 5vw top;
     background-size: 15% auto;
   }
