--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -10,7 +10,7 @@ header,
 
 .custom-header {
   min-height: 200px;
-  background: url("../../images/napis-header.jpg") no-repeat center;
+  background: url("../images/napis-header.jpg") no-repeat center;
   background-size: contain;
 }
 
