--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,6 +1,7 @@
 button {
   padding: 12px;
   font-size: 1.1em;
+  width: 200px;
   color: white;
   background-color: $color-primary;
   border: none;
