--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -24,7 +25,7 @@ body {
   flex-direction: column;
 }
 
-h1 {
+h2 {
   text-align: center;
   color: #c62828;
   font-size: 30px;
@@ -91,11 +92,7 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(
-    135deg,
-    rgba(250, 252, 251, 0.3),
-    rgba(224, 224, 224, 0.3)
-  );
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
 }
 
 .main-content {
@@ -175,6 +172,7 @@ header,
 button {
   padding: 12px;
   font-size: 1.1em;
+  width: 200px;
   color: white;
   background-color: darkolivegreen;
   border: none;
@@ -234,10 +232,58 @@ select {
   font-weight: bold;
   color: #aaa;
 }
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   cursor: pointer;
+}
+
+.product {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-bottom: 15px;
+  font-size: large;
+}
+
+.product-name {
+  display: flex;
+  flex-direction: column; /* Ustawia h3 nad p */
+  justify-content: center;
+  text-align: left;
+  min-width: 200px; /* Jeśli chcesz wyrównać szerokość nazw produktów */
+}
+
+.product-name h3 {
+  margin: 0 0 6px 0; /* Ustalony odstęp pod spodem */
+  font-size: 18px;
+}
+
+.product-name p {
+  margin: 0;
+  font-size: 16px;
+  color: #555;
+}
+
+.add-to-cart {
+  margin-left: 20px;
+  padding: 8px 16px;
+  background-color: #7b4f1d;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.add-to-cart:hover {
+  background-color: #5e3d15;
+}
+
+.submit {
+  text-align: center;
 }
 
 .hamburger {
@@ -268,8 +314,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg")
-    no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -299,7 +344,7 @@ select {
   height: auto;
   max-height: 400px;
   -o-object-fit: contain;
-  object-fit: contain;
+     object-fit: contain;
 }
 
 ul {
@@ -354,11 +399,7 @@ header,
 
 .custom-footer {
   display: none;
-  background: linear-gradient(
-    135deg,
-    rgba(250, 252, 251, 0.3),
-    rgba(224, 224, 224, 0.3)
-  );
+  background: linear-gradient(135deg, rgba(250, 252, 251, 0.3), rgba(224, 224, 224, 0.3));
 }
 
 .main-content {
