--- a/scss/components/_modal.css
+++ b/scss/components/_modal.css
@@ -1,5 +1,6 @@
+@charset "UTF-8";
 .modal {
-  display: none;
+  display: block;
   position: fixed;
   top: 0;
   left: 0;
@@ -30,12 +31,12 @@
   font-size: 40px;
   font-weight: bold;
   color: #aaa;
+}
 
-  &:hover,
-  &:focus {
-    color: black;
-    cursor: pointer;
-  }
+.close:hover,
+.close:focus {
+  color: black;
+  cursor: pointer;
 }
 
 .product {
@@ -48,16 +49,20 @@
   margin-bottom: 15px;
   font-size: large;
 }
+
 .product-name {
   display: flex;
-  flex-direction: column; /* Ustawia h3 nad p */
+  flex-direction: column;
+  /* Ustawia h3 nad p */
   justify-content: center;
   text-align: left;
-  min-width: 200px; /* Jeśli chcesz wyrównać szerokość nazw produktów */
+  min-width: 200px;
+  /* Jeśli chcesz wyrównać szerokość nazw produktów */
 }
 
 .product-name h3 {
-  margin: 0 0 6px 0; /* Ustalony odstęp pod spodem */
+  margin: 0 0 6px 0;
+  /* Ustalony odstęp pod spodem */
   font-size: 18px;
 }
 
@@ -66,6 +71,7 @@
   font-size: 16px;
   color: #555;
 }
+
 .add-to-cart {
   margin-left: 20px;
   padding: 8px 16px;
@@ -76,9 +82,11 @@
   cursor: pointer;
   font-size: 16px;
 }
+
 .add-to-cart:hover {
   background-color: #5e3d15;
 }
+
 .submit {
   text-align: center;
 }
