--- a/scss/components/_modal.css
+++ b/scss/components/_modal.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .modal {
-  display: block;
+  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -33,8 +33,7 @@
   color: #aaa;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: black;
   cursor: pointer;
 }
@@ -89,4 +88,20 @@
 
 .submit {
   text-align: center;
+}
+
+.remove-item {
+  margin-left: 10px;
+  padding: 2px 6px;
+  font-size: 10px;
+  width: 60px;
+  background-color: #d9534f;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.remove-item:hover {
+  background-color: #c9302c;
 }
