--- a/css/main.css
+++ b/css/main.css
@@ -294,7 +294,9 @@ select {
 }
 
 .submit {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .remove-item {
@@ -311,6 +313,16 @@ select {
 
 .remove-item:hover {
   background-color: #c9302c;
+}
+
+#paypal-button-container {
+  gap: 12px;
+  justify-items: center;
+  margin-top: 30px;
+  width: 100%;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hamburger {
