--- a/scss/components/_modal.css
+++ b/scss/components/_modal.css
@@ -88,7 +88,9 @@
 }
 
 .submit {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .remove-item {
@@ -105,4 +107,14 @@
 
 .remove-item:hover {
   background-color: #c9302c;
+}
+
+#paypal-button-container {
+  gap: 12px;
+  justify-items: center;
+  margin-top: 30px;
+  width: 100%;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
