--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -81,7 +81,9 @@
   background-color: #5e3d15;
 }
 .submit {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .remove-item {
   margin-left: 10px;
@@ -97,4 +99,13 @@
 
 .remove-item:hover {
   background-color: #c9302c;
+}
+#paypal-button-container {
+  gap: 12px;
+  justify-items: center;
+  margin-top: 30px;
+  width: 100%;
+  max-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
