added section aboutUS

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,8 @@
 @import "components/modal";
 @import "components/hamburger";
 
-@import "pages/home";
+@import "pages/aboutFengShui";
+@import "pages/aboutUs";
 @import "themes/theme";
 
 @import "layout/header";
