--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,12 @@ body {
   flex-direction: column;
 }
 
+h1,
+h3 {
+  text-transform: uppercase;
+  font-size: 30px;
+}
+
 h2 {
   text-align: center;
   color: #c62828;
@@ -127,6 +133,39 @@ header,
   .img-Fengshui {
     margin-right: 50px;
   }
+  .aboutUs {
+    flex-direction: column;
+    height: auto;
+    padding: 40px 5%;
+  }
+  .text-aboutUs.shadow-aboutUs {
+    width: 90%;
+    font-size: 20px;
+    margin: 10px 0;
+  }
+  .img-aboutUsWrapper {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto 0 auto;
+  }
+  .img-aboutUs {
+    width: 100%;
+    max-width: 400px;
+    padding-bottom: 40px;
+    border-bottom-width: 2px;
+  }
+  .chinese-labels {
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+    font-size: 36px;
+  }
+  .img-caption {
+    font-size: 16px;
+  }
 }
 @media (max-width: 820px) {
   body {
@@ -163,7 +202,30 @@ header,
     margin: 0;
     justify-content: center;
   }
-  button {
+  .text-aboutUs.shadow-aboutUs {
+    font-size: 18px;
+    padding: 10px 15px;
+  }
+  .logoAboutUs {
+    width: 90px;
+    height: 80px;
+  }
+  .img-aboutUsWrapper {
+    max-width: 300px;
+  }
+  .img-aboutUs {
+    max-width: 300px;
+    padding-bottom: 30px;
+  }
+  .chinese-labels {
+    font-size: 28px;
+    bottom: 15px;
+    right: 2px;
+  }
+  .img-caption {
+    font-size: 14px;
+  }
+  .button {
     width: 100%;
     padding: 14px;
     font-size: 1.1em;
@@ -353,7 +415,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../images/plainBackground.jpg") no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("/images/backgroundAboutFengShui.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -388,6 +450,94 @@ select {
 
 ul {
   padding-left: 20px;
+}
+
+.aboutUs {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  padding: 60px 10%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-between;
+  background: rgba(47, 51, 30, 0.4) url("/images/backgroundAbouUs.png") no-repeat center;
+  background-size: cover;
+}
+
+.text-aboutUs.shadow-aboutUs {
+  width: 40%;
+  height: auto;
+  background: rgba(234, 217, 195, 0.5);
+  margin: 20px;
+  padding: 10px 30px;
+  font-size: 25px;
+  color: black;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: justify;
+}
+
+.bottom {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.text-bottom {
+  text-transform: uppercase;
+  font-family: "Lustria", serif;
+  letter-spacing: 8px;
+}
+
+.logoAboutUs {
+  width: 157px;
+  height: 116px;
+}
+
+.img-aboutUsWrapper {
+  position: absolute;
+  bottom: 70px;
+  right: 10%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  width: 560px;
+}
+
+.img-aboutUs {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  width: 560px;
+  padding-bottom: 50px;
+  border-bottom: 3px solid #d89333;
+}
+
+.chinese-labels {
+  position: absolute;
+  bottom: 30px;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  font-size: 48px;
+  color: black;
+  line-height: 1.2;
+}
+
+.img-caption {
+  font-size: 18px;
+  text-align: center;
+  margin: 0;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: end;
 }
 
 header,
@@ -473,6 +623,39 @@ header,
   .img-Fengshui {
     margin-right: 50px;
   }
+  .aboutUs {
+    flex-direction: column;
+    height: auto;
+    padding: 40px 5%;
+  }
+  .text-aboutUs.shadow-aboutUs {
+    width: 90%;
+    font-size: 20px;
+    margin: 10px 0;
+  }
+  .img-aboutUsWrapper {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto 0 auto;
+  }
+  .img-aboutUs {
+    width: 100%;
+    max-width: 400px;
+    padding-bottom: 40px;
+    border-bottom-width: 2px;
+  }
+  .chinese-labels {
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+    font-size: 36px;
+  }
+  .img-caption {
+    font-size: 16px;
+  }
 }
 @media (max-width: 820px) {
   body {
@@ -509,7 +692,30 @@ header,
     margin: 0;
     justify-content: center;
   }
-  button {
+  .text-aboutUs.shadow-aboutUs {
+    font-size: 18px;
+    padding: 10px 15px;
+  }
+  .logoAboutUs {
+    width: 90px;
+    height: 80px;
+  }
+  .img-aboutUsWrapper {
+    max-width: 300px;
+  }
+  .img-aboutUs {
+    max-width: 300px;
+    padding-bottom: 30px;
+  }
+  .chinese-labels {
+    font-size: 28px;
+    bottom: 15px;
+    right: 2px;
+  }
+  .img-caption {
+    font-size: 14px;
+  }
+  .button {
     width: 100%;
     padding: 14px;
     font-size: 1.1em;
