--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -6,6 +6,11 @@ body {
   flex-direction: column;
 }
 
+h1,
+h3 {
+  text-transform: uppercase;
+  font-size: 30px;
+}
 h2 {
   text-align: center;
   color: $color-accent;
