--- a/scss/layout/_responsive.scss
+++ b/scss/layout/_responsive.scss
@@ -25,6 +25,44 @@
   .img-Fengshui {
     margin-right: 50px;
   }
+  .aboutUs {
+    flex-direction: column;
+    height: auto;
+    padding: 40px 5%;
+  }
+
+  .text-aboutUs.shadow-aboutUs {
+    width: 90%;
+    font-size: 20px;
+    margin: 10px 0;
+  }
+
+  .img-aboutUsWrapper {
+    position: relative;
+    bottom: auto;
+    right: auto;
+    width: 100%;
+    max-width: 400px;
+    margin: 20px auto 0 auto;
+  }
+
+  .img-aboutUs {
+    width: 100%;
+    max-width: 400px;
+    padding-bottom: 40px;
+    border-bottom-width: 2px;
+  }
+
+  .chinese-labels {
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+    font-size: 36px;
+  }
+
+  .img-caption {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 820px) {
@@ -70,8 +108,35 @@
     margin: 0;
     justify-content: center;
   }
+  .text-aboutUs.shadow-aboutUs {
+    font-size: 18px;
+    padding: 10px 15px;
+  }
+  .logoAboutUs {
+    width: 90px;
+    height: 80px;
+  }
 
-  button {
+  .img-aboutUsWrapper {
+    max-width: 300px;
+  }
+
+  .img-aboutUs {
+    max-width: 300px;
+    padding-bottom: 30px;
+  }
+
+  .chinese-labels {
+    font-size: 28px;
+    bottom: 15px;
+    right: 2px;
+  }
+
+  .img-caption {
+    font-size: 14px;
+  }
+
+  .button {
     width: 100%;
     padding: 14px;
     font-size: 1.1em;
