--- a/css/main.css
+++ b/css/main.css
@@ -8,13 +8,13 @@
   vertical-align: baseline;
   text-decoration: none;
   outline: 0;
-  overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
 }
 
-body::-webkit-scrollbar {
-  display: none;
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-y: scroll;
 }
 
 body {
@@ -110,6 +110,16 @@ header,
 }
 
 @media (max-width: 1024px) {
+  .html {
+    overflow-y: auto;
+  }
+  html::-webkit-scrollbar {
+    display: none;
+  }
+  html {
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* IE i Edge */
+  }
   .header {
     min-height: 150px;
   }
@@ -143,6 +153,13 @@ header,
     font-size: 20px;
     margin: 10px 0;
   }
+  .bottom {
+    gap: 10px;
+  }
+  .logoAboutUs {
+    width: 20%;
+    height: 20%;
+  }
   .img-aboutUsWrapper {
     position: relative;
     bottom: auto;
@@ -156,6 +173,10 @@ header,
     max-width: 400px;
     padding-bottom: 40px;
     border-bottom-width: 2px;
+  }
+  .lotus-aboutUs {
+    width: 90%;
+    height: 90%;
   }
   .chinese-labels {
     position: absolute;
@@ -206,9 +227,12 @@ header,
     font-size: 18px;
     padding: 10px 15px;
   }
+  .bottom {
+    gap: 3px;
+  }
   .logoAboutUs {
-    width: 90px;
-    height: 80px;
+    width: 15%;
+    height: 15%;
   }
   .img-aboutUsWrapper {
     max-width: 300px;
@@ -216,11 +240,15 @@ header,
   .img-aboutUs {
     max-width: 300px;
     padding-bottom: 30px;
+    justify-content: center;
+  }
+  .lotus-aboutUs {
+    width: 70%;
+    height: 70%;
   }
   .chinese-labels {
     font-size: 28px;
     bottom: 15px;
-    right: 2px;
   }
   .img-caption {
     font-size: 14px;
@@ -484,7 +512,8 @@ ul {
 .bottom {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 30px;
   margin-top: 20px;
 }
 
@@ -495,8 +524,8 @@ ul {
 }
 
 .logoAboutUs {
-  width: 157px;
-  height: 116px;
+  width: 30%;
+  height: 30% px;
 }
 
 .img-aboutUsWrapper {
@@ -517,7 +546,7 @@ ul {
   position: relative;
   width: 560px;
   padding-bottom: 50px;
-  border-bottom: 3px solid #d89333;
+  border-bottom: 3px solid #c9a036;
 }
 
 .chinese-labels {
@@ -600,6 +629,16 @@ header,
 }
 
 @media (max-width: 1024px) {
+  .html {
+    overflow-y: auto;
+  }
+  html::-webkit-scrollbar {
+    display: none;
+  }
+  html {
+    scrollbar-width: none;
+    -ms-overflow-style: none; /* IE i Edge */
+  }
   .header {
     min-height: 150px;
   }
@@ -633,6 +672,13 @@ header,
     font-size: 20px;
     margin: 10px 0;
   }
+  .bottom {
+    gap: 10px;
+  }
+  .logoAboutUs {
+    width: 20%;
+    height: 20%;
+  }
   .img-aboutUsWrapper {
     position: relative;
     bottom: auto;
@@ -646,6 +692,10 @@ header,
     max-width: 400px;
     padding-bottom: 40px;
     border-bottom-width: 2px;
+  }
+  .lotus-aboutUs {
+    width: 90%;
+    height: 90%;
   }
   .chinese-labels {
     position: absolute;
@@ -696,9 +746,12 @@ header,
     font-size: 18px;
     padding: 10px 15px;
   }
+  .bottom {
+    gap: 3px;
+  }
   .logoAboutUs {
-    width: 90px;
-    height: 80px;
+    width: 15%;
+    height: 15%;
   }
   .img-aboutUsWrapper {
     max-width: 300px;
@@ -706,11 +759,15 @@ header,
   .img-aboutUs {
     max-width: 300px;
     padding-bottom: 30px;
+    justify-content: center;
+  }
+  .lotus-aboutUs {
+    width: 70%;
+    height: 70%;
   }
   .chinese-labels {
     font-size: 28px;
     bottom: 15px;
-    right: 2px;
   }
   .img-caption {
     font-size: 14px;
