--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -16,12 +16,13 @@ h1,
 h3 {
   text-transform: uppercase;
   font-size: 30px;
+  padding: 20px 0;
 }
 h2 {
   text-align: center;
   color: $color-accent;
-  font-size: 30px;
   margin-bottom: 20px;
+  font-size: 30px;
   font-family: "Cormorant Garamond", serif;
 }
 
