--- a/scss/pages/_aboutUs.scss
+++ b/scss/pages/_aboutUs.scss
@@ -1,7 +1,7 @@
 .aboutUs {
   position: relative;
   width: 100%;
-  height: 100vh;
+  height: 90%;
   padding: 60px 10%;
   display: flex;
   flex-direction: row;
@@ -16,15 +16,16 @@
   width: 40%;
   height: auto;
   background: rgba(234, 217, 195, 0.5);
-  margin: 20px;
-  padding: 10px 30px;
-  font-size: 25px;
+  //   margin: 20px;
+  padding: 0 30px;
   color: black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   text-align: justify;
+  //   font-family: "Cinzel", serif;
+  font-size: 25px;
 }
 .bottom {
   display: flex;
