changed images paths

--- a/css/main.css
+++ b/css/main.css
@@ -444,7 +444,7 @@ select {
   align-items: center;
   justify-content: center;
   gap: 20px;
-  background: rgba(47, 51, 30, 0.4) url("../../images/backgroundAboutFengShui.jpg") no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAboutFengShui.jpg") no-repeat center;
   background-size: cover;
 }
 
@@ -496,7 +496,7 @@ ul {
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  background: rgba(47, 51, 30, 0.4) url("../../images/backgroundAbouUs.png") no-repeat center;
+  background: rgba(47, 51, 30, 0.4) url("../images/backgroundAbouUs.png") no-repeat center;
   background-size: cover;
 }
 
